--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -32,9 +32,9 @@ spring:
       indent-output: true
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://localhost:5432/medSlot
-    username: medSlot
-    password:
+    url: jdbc:postgresql://localhost:5432/medslot
+    username: postgres
+    password: postgres
     hikari:
       poolName: Hikari
       auto-commit: false
