--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -94,7 +94,7 @@ spring:
     name: medSlot
   docker:
     compose:
-      enabled: true
+      enabled: false
       lifecycle-management: start-only
       file: src/main/docker/services.yml
   profiles:
